Update obsolete documentation